# EventProcessor

./: .gitignore  CMakeLists.txt  README.md  test.cpp
EventProcessor/: BaseEvent.h  CMakeLists.txt  EventExecutor.cpp  EventExecutor.h  EventLib.hpp  EventManager.h  EventSource.h  Observable.h  Observer.h
